--- a/profiles/deployment.properties
+++ b/profiles/deployment.properties
@@ -7,7 +7,17 @@ app.web.compression.enabled=false
 app.web.compression.mimetypes.excludePatterns=image/*
 app.web.compression.mimetypes.includePatterns=*/*
 app.web.compression.minsize=65536
-security.enabled=false
+db.HealthyOps.dataSourceType=WM_MANAGED_DATASOURCE
+db.HealthyOps.hbm2ddl=update
+db.HealthyOps.jndiName=
+db.HealthyOps.maxPageSize=100
+db.HealthyOps.maxPoolSize=4
+db.HealthyOps.minPoolSize=2
+db.HealthyOps.password={WM_CLOUD_MYSQL_PASSWORD}
+db.HealthyOps.transactionTimeout=30
+db.HealthyOps.url=jdbc:mysql://{WM_CLOUD_MYSQL_HOST}/HealthyOps?useUnicode=yes&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&createDatabaseIfNotExist=true
+db.HealthyOps.username={WM_CLOUD_MYSQL_USER_NAME}
+security.enabled=true
 security.general.cors.allowCredentials=false
 security.general.cors.enabled=false
 security.general.cors.maxAge=1600
@@ -15,7 +25,14 @@ security.general.cors.root.allowedOrigins=*
 security.general.frameOptions.allowFromUrl=
 security.general.frameOptions.enabled=true
 security.general.frameOptions.mode=SAMEORIGIN
+security.general.rememberMe.enabled=true
+security.general.rememberMe.timeOut=1296000
+security.general.session.timeout=30
 security.general.ssl.enabled=false
 security.general.ssl.port=443
+security.general.tokenService.enabled=true
+security.general.tokenService.parameter=WM_AUTH_TOKEN
+security.general.tokenService.tokenValiditySeconds=1800
+security.general.xsrf.enabled=true
 security.general.xss.enabled=false
-security.providers=DEMO
+security.providers=CUSTOM
