--- a/src/main/webapp/config.json
+++ b/src/main/webapp/config.json
@@ -1,1 +1,1 @@
-{"baseUrl":"","buildMode":"DEV","offlineStorage":false}
+{"baseUrl":"{{DEVELOPMENT_URL}}","buildMode":"DEV","offlineStorage":false,"customUrlScheme":"com.mobiwiz"}
