--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -11,7 +11,15 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "Registration",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "leftnav",
   "type" : "LEFTNAV",
+  "params" : [ ]
+}, {
+  "name" : "pgList",
+  "type" : "PAGE",
   "params" : [ ]
 } ]
