--- a/profiles/development.properties
+++ b/profiles/development.properties
@@ -33,6 +33,6 @@ security.general.ssl.port=443
 security.general.tokenService.enabled=true
 security.general.tokenService.parameter=WM_AUTH_TOKEN
 security.general.tokenService.tokenValiditySeconds=1800
-security.general.xsrf.enabled=true
+security.general.xsrf.enabled=false
 security.general.xss.enabled=false
 security.providers=CUSTOM
