--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -19,6 +19,10 @@
   "type" : "LEFTNAV",
   "params" : [ ]
 }, {
+  "name" : "pgDoctorsList",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "pgList",
   "type" : "PAGE",
   "params" : [ ]
