New files added - [PgPatientRegForm,OrthoSA.jpg] Files modified - [Main,.wmproject.properties,app.variables.json,pages-config.json] New files added - [PgPatientRegForm,OrthoSA.jpg] Files modified - [Main,.wmproject.properties,app.variables.json,pages-config.json]

--- a/.wmproject.properties
+++ b/.wmproject.properties
@@ -6,7 +6,7 @@
  This software is the confidential and proprietary information of medicalwizard.com.au You shall not disclose such Confidential Information and shall use it only in accordance
  with the terms of the source code license agreement you entered into with medicalwizard.com.au</entry>
 <entry key="dateFormat"/>
-<entry key="homePage">Main</entry>
+<entry key="homePage">PgPatientRegForm</entry>
 <entry key="studioProjectUpgradeVersion">93.08</entry>
 <entry key="timeFormat"/>
 <entry key="packagePrefix">com.mobiwiz</entry>
