--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,13 @@
             </resource>
             <resource>
                 <filtering>true</filtering>
+                <directory>services/MyAuthenticationManager/src</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <filtering>true</filtering>
                 <directory>services/securityService/src</directory>
                 <excludes>
                     <exclude>**/*.java</exclude>
@@ -125,6 +132,7 @@
                                 <source>services/CWmwSQL/src</source>
                                 <source>services/CognitoUPoolLogin/src</source>
                                 <source>services/HealthyOps/src</source>
+                                <source>services/MyAuthenticationManager/src</source>
                                 <source>services/securityService/src</source>
                             </sources>
                         </configuration>
@@ -304,6 +312,11 @@
             <version>1.0</version>
             <scope>system</scope>
             <systemPath>${project.lib.directory}/sqljdbc42.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.social</groupId>
+            <artifactId>spring-social-google</artifactId>
+            <version>1.0.0.RELEASE</version>
         </dependency>
     </dependencies>
     <dependencyManagement>
