--- a/profiles/development.properties
+++ b/profiles/development.properties
@@ -28,6 +28,10 @@ db.HealthyOps.password={WM_CLOUD_MYSQL_PASSWORD}
 db.HealthyOps.transactionTimeout=30
 db.HealthyOps.url=jdbc:mysql://{WM_CLOUD_MYSQL_HOST}/HealthyOps?useUnicode=yes&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&createDatabaseIfNotExist=true
 db.HealthyOps.username={WM_CLOUD_MYSQL_USER_NAME}
+prefab.GoogleOAuth.app.web.compression.enabled=false
+prefab.GoogleOAuth.app.web.compression.mimetypes.excludePatterns=image/**,application/**
+prefab.GoogleOAuth.app.web.compression.mimetypes.includePatterns=*/*
+prefab.GoogleOAuth.app.web.compression.minsize=65536
 security.enabled=true
 security.general.cors.allowCredentials=false
 security.general.cors.enabled=false
